--- a/style.css
+++ b/style.css
@@ -12,6 +12,10 @@
     /* Locate the .ttf file within your directory*/
 }
 
+body {
+    background-color: #003a36;
+}
+
 * {
     padding: 0;
     margin: 0;
@@ -25,7 +29,7 @@ svg {
 
 svg:hover {
     scale: 1.2;
-    color: #5dd10fed;
+    color: #2f7500ed;
     cursor: pointer;
 }
 
@@ -33,6 +37,13 @@ svg:hover {
 .textMain {
     font-size: 75px;
     font-family: 'minecrafter', 'sans-serif';
+    color: #3b9500ed;
+}
+
+.colorBrown {
+    font-size: 75px;
+    font-family: 'minecrafter', 'sans-serif';
+    color: #954100ed;
 }
 
 .progress {
@@ -40,13 +51,11 @@ svg:hover {
     top: 0;
     height: 5px;
     color: white;
-    background-color: #006d02;
+    background-color: rgb(0, 0, 0);
 }
 
 .progress-bar {
-
-    background-color: #5dd10fed;
-    ;
+    background-color: #3b9500ed;
 }
 
 .music-name {
@@ -64,26 +73,35 @@ svg:hover {
     position: fixed;
     bottom: 0;
     width: 100%;
-    background-color: #006d02;
-    color: white;
+    background-color: #000000;
+    color: #3b9500ed;
 }
 
 .musicCard {
-    background-color: red;
+    background-color: #00734b;
+    color: #000000ed;
 }
 
 .musicCardImg {
-    box-sizing: border-box;
     vertical-align: middle;
     aspect-ratio: 1/1;
-    width: 60%;
+    width: 35%;
 }
 
-.musicCard-name{
+.musicCard-name {
     font-size: 35px;
 }
 
-.musicCard-by{
+.musicCard-by {
     font-size: 15px;
-    
+}
+
+.musciCardPlay {
+    background-color: #008d3fed;
+    transition: 0.2s;
+}
+
+.musciCardPlay:hover {
+    cursor: pointer;
+    scale: 1.05;
 }
