--- a/style.css
+++ b/style.css
@@ -53,7 +53,8 @@ svg:hover {
     top: 0;
     height: 5px;
     color: white;
-    background-color: rgb(0, 0, 0);
+    background-color: #151515e5;
+    
 }
 
 .progress-bar {
@@ -75,7 +76,7 @@ svg:hover {
     position: fixed;
     bottom: 0;
     width: 100%;
-    background-color: #000000;
+    background-color: #151515e5;
     color: #3b9500ed;
 }
 
