--- a/style.css
+++ b/style.css
@@ -155,6 +155,20 @@ svg:hover {
 }
 
 
+@media only screen and (max-width:768px) {
+    .musicCardImg {
+        width: 50%;
+    }
+    .musicCard-name{
+        font-size: 25px;
+    }
+    .musicCard-by{
+        font-size: 13px;
+    }
+    .textMain {
+        font-size: 60px;
+    }
+}
 
 
 @media only screen and (max-width:576px) {
@@ -162,7 +176,7 @@ svg:hover {
         width: 20%;
     }
     .musicCard-name{
-        font-size: 25px;
+        font-size: 23px;
     }
     .musicCard-by{
         font-size: 15px;
@@ -178,7 +192,7 @@ svg:hover {
         width: 20%;
     }
     .musicCard-name{
-        font-size: 22px;
+        font-size: 20px;
     }
     .musicCard-by{
         font-size: 13px;
@@ -187,3 +201,4 @@ svg:hover {
         font-size: 50px;
     }
 }
+
