--- a/style.css
+++ b/style.css
@@ -100,11 +100,11 @@ svg:hover {
     width: 100%;
     background-color: #151515e5;
     color: #3b9500ed;
-    animation: fade-in 1s ease 0s 1 forwards;
+    animation: fade-in-bottom 1s ease 0s 1 forwards;
     z-index: 1;
 }
 
-@keyframes fade-in {
+@keyframes fade-in-bottom {
     0% {
         opacity: 0;
         transform: translateY(100px);
@@ -163,28 +163,52 @@ svg:hover {
     color: #00d647ed;
 }
 
-.queueSeprator{
+.queueSeprator {
     background-color: #00938c;
     width: 85%;
     height: 4px;
 }
 
-.queueTitle{
+.queueTitle {
     font-size: 45px;
     font-family: 'minecrafter', 'sans-serif';
     color: #3b9500ed;
 }
 
-.queueNumber{
+.queueNumber {
     background-color: #008d3fed;
 
 }
 
+.addSongsToQueueBar {
+    position: fixed;
+    top: -1px;
+    width: 100%;
+    background-color: #151515d7;
+    color: #44a900f9;
+    animation: fade-in-top 1s ease 0s 1 forwards;
+    z-index: 1;
+    font-size: 25px;
+    backdrop-filter: blur(5);
+    -webkit-backdrop-filter: blur(2px)
+}
+
+@keyframes fade-in-top {
+    0% {
+        opacity: 0;
+        transform: translateY(-100px);
+    }
+
+    100% {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
 
 
 @media only screen and (min-width:992px) {
 
-    .queueSeprator{
+    .queueSeprator {
         width: 80%;
     }
 }
@@ -205,7 +229,7 @@ svg:hover {
     .textMain {
         font-size: 55px;
     }
- 
+
 }
 
 
@@ -225,7 +249,8 @@ svg:hover {
     .textMain {
         font-size: 45px;
     }
-    .queueSeprator{
+
+    .queueSeprator {
         width: 90%;
     }
 }
@@ -249,7 +274,7 @@ svg:hover {
         font-size: 55px;
     }
 
-    .queueSeprator{
+    .queueSeprator {
         width: 95%;
     }
 }
